# Umbris-AI-LLM-Swarm-Architecture

./: .env.example  .gitignore  ANNOUNCEMENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  treasury-log.md
brand/: README.md
docs/: architecture.md  custos.md  lineage.md  quickstart.md  tokenomics.md  v2-takeover-protocol.md  whitepaper.md
docs/convocation-decisions/: 0001-repair-the-instrument-before-triaging-by-it.md  (+1 more)
umbris-core/: .env.example  README.md  pyproject.toml
umbris-core/console/: UMBRIS Custos Console.bat  custos_console.py
umbris-core/examples/: compositione_continuous.py  compositione_demo.py  hello_convocation.py  using_ollama.py  using_openai.py
umbris-core/src/umbris/: __init__.py  blackboard.py  cli.py  compositione.py  consensus.py  introspection.py  personalities.py  provenance.py  umbra.py
umbris-core/src/umbris/agents/: base.py  iuppiter.py  luna.py  mars.py  mercurius.py  saturnus.py  sol.py  stella.py  venus.py
umbris-core/src/umbris/daemon/: __init__.py  apply.py  core.py  cycle.py  git_ops.py  log.py  safety.py  transcript.py
umbris-core/src/umbris/llm/: client.py
umbris-core/src/umbris/llm/providers/: __init__.py  anthropic.py  base.py  mock.py  ollama.py  openai.py
umbris-core/src/umbris/memory/: graph.py  vector.py
umbris-core/src/umbris/server/: __init__.py  app.py  ui.py
umbris-core/tests/: test_blackboard.py  test_consensus.py  test_daemon.py  test_hive.py  test_introspection.py  test_providers.py  test_server.py
umbris-studio/: .gitignore  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
umbris-studio/src-tauri/: Cargo.toml  tauri.conf.json
umbris-studio/src-tauri/capabilities/: default.json
umbris-studio/src-tauri/src/: lib.rs  main.rs  sidecar.rs
umbris-web/: .gitignore  README.md  next.config.js  package.json  vercel.json
(+145 files in other folders)
