[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "umbris"
version = "1.0.0"
description = "UMBRIS · a hermetic-cosmic multi-agent LLM convocation for collective reasoning"
authors = [{ name = "UmbrisLLM" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "anyio>=4.3",
    "structlog>=24.1",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
umbris = "umbris.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/umbris"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
